--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -120,6 +120,7 @@ jobs:
   # Job 13: E2E testing
   e2e-testing:
     name: E2E Testing
+    container: mcr.microsoft.com/playwright:v1.55.0-noble
     runs-on: ubuntu-latest
     needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
     if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
@@ -133,10 +134,6 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
           working-directory: ${{ github.workspace }}
-
-      - name: Install Playwright browsers
-        working-directory: ./tests/e2e-tests
-        run: npx playwright install chromium --with-deps
 
       - name: Build projects
         run: |
