--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -122,8 +122,9 @@ jobs:
     name: E2E Testing
     container: mcr.microsoft.com/playwright:v1.55.1-noble
     runs-on: ubuntu-latest
-    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
-    if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
+    #needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
+    if: always()
+    #if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
     timeout-minutes: 30
     services:
       mysql:
@@ -159,7 +160,7 @@ jobs:
       - name: Run database migrations
         env:
           NODE_ENV: test
-          MYSQL_HOST: localhost
+          MYSQL_HOST: mysql
           MYSQL_PORT: 3306
           MYSQL_USER: root
           MYSQL_PASSWORD: test_password
@@ -176,7 +177,7 @@ jobs:
           BRUTE_FORCE_WINDOW_MS=600000
           BRUTE_FORCE_MAX_ATTEMPTS=20
           PORT=${{ secrets.SERVER_PORT || '3000' }}
-          MYSQL_HOST: localhost
+          MYSQL_HOST: mysql
           MYSQL_PORT: 3306
           MYSQL_USER: root
           MYSQL_PASSWORD: test_db
