--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -122,8 +122,9 @@ jobs:
     name: E2E Testing
     container: mcr.microsoft.com/playwright:v1.55.1-noble
     runs-on: ubuntu-latest
-    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
-    if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
+    #needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
+    #if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
+    if: always()
     timeout-minutes: 30
     services:
       mysql:
@@ -150,6 +151,17 @@ jobs:
 
       - name: Build projects
         run: |
+          # Set up environment variables for testing
+          cat > ./client/.env << EOF
+          VITE_API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
+          VITE_FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
+          VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          VITE_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+          VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          VITE_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}
+          EOF
+          
           npm run build \
             --workspace=packages/types \
             --workspace=packages/sdk \
@@ -174,7 +186,7 @@ jobs:
           NODE_ENV=test
           DATA_DIR=./data
           BRUTE_FORCE_WINDOW_MS=600000
-          BRUTE_FORCE_MAX_ATTEMPTS=20
+          BRUTE_FORCE_MAX_ATTEMPTS=100
           PORT=${{ secrets.SERVER_PORT || '3000' }}
           MYSQL_HOST: mysql
           MYSQL_PORT: 3306
@@ -204,30 +216,19 @@ jobs:
       - name: Start client development server
         working-directory: ./client
         run: |
-          # Set up environment variables for testing
-          cat > .env << EOF
-          VITE_API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
-          VITE_FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
-          VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          VITE_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
-          VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
-          VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-          VITE_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}
-          EOF
-
-          # Start client dev server in background
-          npm run dev &
+          # Start client server in background
+          npm run preview &
           echo $! > client.pid
 
           # Wait for client to be ready
-          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.CLIENT_PORT || '5173' }}; do sleep 2; done'
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.CLIENT_PORT || '4173' }}; do sleep 2; done'
 
       - name: Run E2E tests
         working-directory: ./tests/e2e-tests
         run: |
           # Set up environment variables for e2e tests
           cat > .env << EOF
-          BASE_URL=http://localhost:${{ secrets.CLIENT_PORT || '5173' }}
+          BASE_URL=http://localhost:${{ secrets.CLIENT_PORT || '4173' }}
           API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
           API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           CI=true
@@ -258,7 +259,7 @@ jobs:
           fi
           # Kill any remaining processes on the ports
           sudo lsof -ti:${{ secrets.SERVER_PORT || '3000' }} | xargs -r sudo kill -9 || true
-          sudo lsof -ti:${{ secrets.CLIENT_PORT || '5173' }} | xargs -r sudo kill -9 || true
+          sudo lsof -ti:${{ secrets.CLIENT_PORT || '4173' }} | xargs -r sudo kill -9 || true
 
   # Job 14: Final validation and summary
   validation-summary:
