--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -207,7 +207,7 @@ jobs:
           EOF
 
           # Start server in background
-          npm start &
+          npm start > server.log 2>&1 &
           echo $! > server.pid
 
           # Wait for server to be ready
@@ -239,13 +239,21 @@ jobs:
         env:
           CI: true
 
-      - name: Upload test videos
+      - name: Upload test report
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: e2e-test-videos
+          name: e2e-test-report
           path: tests/e2e-tests/playwright-report/
-          retention-days: 3
+          retention-days: 1
+
+      - name: Upload server logs
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: server-logs
+          path: server/server.log
+          retention-days: 1
 
       - name: Cleanup processes
         if: always()
