--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -122,9 +122,8 @@ jobs:
     name: E2E Testing
     container: mcr.microsoft.com/playwright:v1.55.1-noble
     runs-on: ubuntu-latest
-    #needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
-    #if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
-    if: always()
+    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
+    if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
     timeout-minutes: 30
     services:
       mysql:
@@ -191,9 +190,9 @@ jobs:
           MYSQL_HOST: mysql
           MYSQL_PORT: 3306
           MYSQL_USER: root
-          MYSQL_PASSWORD: test_db
-          MYSQL_DATABASE: test_password
-          API_SECURITY_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_db
+          API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
           FIREBASE_PRIVATE_KEY="${{ secrets.FIREBASE_PRIVATE_KEY }}"
           FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
@@ -230,7 +229,7 @@ jobs:
           cat > .env << EOF
           BASE_URL=http://localhost:${{ secrets.CLIENT_PORT || '4173' }}
           API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
-          API_SECURITY_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+          API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           CI=true
           EOF
 
