--- a/.github/workflows/deploy-project-documentation.yml
+++ b/.github/workflows/deploy-project-documentation.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: '22.16.0'
+          node-version: '22.19.0'
           cache: 'npm'
-          cache-dependency-path: package-lock.json
+          cache-dependency-path: docs/package-lock.json
 
       - name: Install documentation dependencies
         run: npm ci
