--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -120,10 +120,24 @@ jobs:
   # Job 13: E2E testing
   e2e-testing:
     name: E2E Testing
+    container: mcr.microsoft.com/playwright:v1.55.1-noble
     runs-on: ubuntu-latest
     needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
     if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
     timeout-minutes: 30
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: test_password
+          MYSQL_DATABASE: test_db
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -134,34 +148,34 @@ jobs:
           node-version: ${{ inputs.node-version }}
           working-directory: ${{ github.workspace }}
 
-      - name: Install Playwright browsers
-        working-directory: ./tests/e2e-tests
-        run: npx playwright install chromium --with-deps
-
       - name: Build projects
         run: |
+          # Set up environment variables for testing
+          cat > ./client/.env << EOF
+          VITE_API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
+          VITE_FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
+          VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          VITE_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+          VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          VITE_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}
+          EOF
+          
           npm run build \
             --workspace=packages/types \
             --workspace=packages/sdk \
             --workspace=server \
             --workspace=client
 
-      - name: Setup test database
-        run: |
-          # Start MySQL service
-          sudo systemctl start mysql
-          # Create test database
-          mysql -u root -p${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }} -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }};"
-
       - name: Run database migrations
-        working-directory: ./server
-        run: npm run migrate
         env:
-          MYSQL_HOST: ${{ secrets.MYSQL_HOST || 'localhost' }}
-          MYSQL_PORT: ${{ secrets.MYSQL_PORT || '3306' }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER || 'root' }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD || secrets.MYSQL_ROOT_PASSWORD || 'root' }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }}
+          NODE_ENV: test
+          MYSQL_HOST: mysql
+          MYSQL_PORT: 3306
+          MYSQL_USER: root
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_db
+        run: pnpm --filter=server run migrate
 
       - name: Start server in background
         working-directory: ./server
@@ -171,13 +185,13 @@ jobs:
           NODE_ENV=test
           DATA_DIR=./data
           BRUTE_FORCE_WINDOW_MS=600000
-          BRUTE_FORCE_MAX_ATTEMPTS=20
+          BRUTE_FORCE_MAX_ATTEMPTS=100
           PORT=${{ secrets.SERVER_PORT || '3000' }}
-          MYSQL_HOST=${{ secrets.MYSQL_HOST || 'localhost' }}
-          MYSQL_PORT=${{ secrets.MYSQL_PORT || '3306' }}
-          MYSQL_USER=${{ secrets.MYSQL_USER || 'root' }}
-          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD || secrets.MYSQL_ROOT_PASSWORD || 'root' }}
-          MYSQL_DATABASE=${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }}
+          MYSQL_HOST: mysql
+          MYSQL_PORT: 3306
+          MYSQL_USER: root
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_db
           API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
           FIREBASE_PRIVATE_KEY="${{ secrets.FIREBASE_PRIVATE_KEY }}"
@@ -192,7 +206,7 @@ jobs:
           EOF
 
           # Start server in background
-          npm start &
+          npm start > server.log 2>&1 &
           echo $! > server.pid
 
           # Wait for server to be ready
@@ -201,30 +215,19 @@ jobs:
       - name: Start client development server
         working-directory: ./client
         run: |
-          # Set up environment variables for testing
-          cat > .env << EOF
-          VITE_API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
-          VITE_FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
-          VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          VITE_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
-          VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
-          VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-          VITE_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}
-          EOF
-
-          # Start client dev server in background
-          npm run dev &
+          # Start client server in background
+          npm run preview &
           echo $! > client.pid
 
           # Wait for client to be ready
-          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.CLIENT_PORT || '5173' }}; do sleep 2; done'
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.CLIENT_PORT || '4173' }}; do sleep 2; done'
 
       - name: Run E2E tests
         working-directory: ./tests/e2e-tests
         run: |
           # Set up environment variables for e2e tests
           cat > .env << EOF
-          BASE_URL=http://localhost:${{ secrets.CLIENT_PORT || '5173' }}
+          BASE_URL=http://localhost:${{ secrets.CLIENT_PORT || '4173' }}
           API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
           API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           CI=true
@@ -235,13 +238,21 @@ jobs:
         env:
           CI: true
 
-      - name: Upload test videos
+      - name: Upload test report
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: e2e-test-videos
-          path: tests/e2e-tests/test-results/
-          retention-days: 3
+          name: e2e-test-report
+          path: tests/e2e-tests/playwright-report/
+          retention-days: 1
+
+      - name: Upload server logs
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: server-logs
+          path: server/server.log
+          retention-days: 1
 
       - name: Cleanup processes
         if: always()
@@ -255,7 +266,7 @@ jobs:
           fi
           # Kill any remaining processes on the ports
           sudo lsof -ti:${{ secrets.SERVER_PORT || '3000' }} | xargs -r sudo kill -9 || true
-          sudo lsof -ti:${{ secrets.CLIENT_PORT || '5173' }} | xargs -r sudo kill -9 || true
+          sudo lsof -ti:${{ secrets.CLIENT_PORT || '4173' }} | xargs -r sudo kill -9 || true
 
   # Job 14: Final validation and summary
   validation-summary:
