--- a/tests/e2e-tests/.env.example
+++ b/tests/e2e-tests/.env.example
@@ -17,3 +17,10 @@ TEST_RETRIES=2
 # Browser configuration
 HEADLESS=true
 SLOW_MO=0
+
+# MySQL Configuration
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=your-mysql-password
+MYSQL_DATABASE=cypress_dashboard
