--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@types/luxon": "^3.7.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@vitejs/plugin-react": "^5.0.2",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.36.0",
