--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,14 +13,19 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "lint": "echo \"No linting configured\"",
-    "lint-fix": "echo \"No linting configured\"",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "test": "echo \"No tests configured\"",
     "prepublishOnly": "pnpm run clean && pnpm run build",
     "dev": "tsc --watch",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
     "typescript": "^5.9.2"
   },
   "exports": {
