--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -123,7 +123,7 @@ jobs:
     container: mcr.microsoft.com/playwright:v1.55.1-noble
     runs-on: ubuntu-latest
     needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
-    if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
+    if: always() && ((needs.basic-validation.result == 'success' || needs.basic-validation.outputs.tests-e2e-changed ) && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped'))
     timeout-minutes: 30
     services:
       mysql:
@@ -218,10 +218,12 @@ jobs:
           FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
           FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}
           FIREBASE_CLIENT_CERT_URL=${{ secrets.FIREBASE_CLIENT_CERT_URL }}
-          GITHUB_TOKEN=${{ secrets.SERVER_GITHUB_TOKEN }}
+          GITHUB_TOKEN=your-github-token
+          GITHUB_URL=http://localhost:3001/github
           JIRA_API_TOKEN="jira-token-placeholder"
           JIRA_BASE_URL=http://localhost:3001/jira
-          CIRCLE_CI_TOKEN=${{ secrets.CIRCLE_CI_TOKEN }}
+          CIRCLE_CI_TOKEN=your-circle-ci-token
+          E2E_PIPELINE_URL=circle-ci-pipeline-url
           EOF
 
           # Start server in background
