--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -264,12 +264,20 @@ jobs:
         env:
           CI: true
 
-      - name: Upload test report
+      - name: Upload Playwright report
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: e2e-test-report
+          name: playwright-report-report
           path: tests/e2e-tests/playwright-report/
+          retention-days: 1
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: playwright-report-report
+          path: tests/e2e-tests/test-results/
           retention-days: 1
 
       - name: Upload server logs
