--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -276,7 +276,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: playwright-report-report
+          name: playwright-test-report
           path: tests/e2e-tests/test-results/
           retention-days: 1
 
