--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,6 +2,7 @@
   "name": "@my-dashboard/types",
   "version": "1.0.0",
   "description": "Shared interfaces and types for My Dashboard server and client applications",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "typescript-eslint": "^8.45.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "eslint": "^9.36.0",
